test/negative/feature_classliterals.java

public class feature_classliterals {
  protected java.lang.Class x = A.class;
  public feature_classliterals() {}
}

